# Assignment

./: pyproject.toml  requirements.txt
app/: main.py  test.py
app/data_processing/: data_processing.py  doc_processing.py
app/vector_store/: vector_store.py
faiss_store/: index.faiss  index.pkl
notebooks/: adv.ipynb  test.ipynb
