[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "app>=0.0.1",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.123.4",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langgraph>=1.0.4",
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
